# Developable-Mesh

./: .gitignore  CMakeLists.txt
src/: Dev_Inter.cpp  Dev_Inter.h  DifferentialOperators.cpp  DifferentialOperators.h  DifferentiationMatrix.cpp  LaplacianSmooth.cpp  interpolation.cpp  interpolation.h  least_norm.cpp  least_norm.h  main.cpp
src/ADMM/: ADMM.cpp  ADMM.h
src/DoF/: DoF.cpp  DoF.h
src/DoTM/: DoTM.cpp  DoTM.h
src/Interpolation/: interpolation.cpp  interpolation.h  main.cpp
src/L0Inter/: L0Inter.cpp  L0Inter.h
src/L1Inter/: L1Inter.cpp  L1Inter.h
src/LBFGS/: LBFGS.cpp  LBFGS.h
src/LeastNorm/: least_norm.cpp  least_norm.h  main.cpp  myVisualizer.cpp  myVisualizer.h
src/MeshUpdate/: meshupdate.cpp  myVisualizer.cpp  myVisualizer.h
src/NewtonMethod/: newtonMethod.cpp  newtonMethod.h
src/Plan3/: Plan3.cpp  Plan3.h
src/Plan4/: Plan4.cpp  Plan4.h
src/PlanB/: PlanB.cpp  PlanB.h  mosek_solver.h
src/QP/: QP.cpp  QP.h  mosek_solver.h
src/solver/: func_opt.cpp  func_opt.h  main.cpp  newton_solver.cpp  newton_solver.h  residual_func.h
src/tools/: AABBSearcher.h  cal_Jacobian_of_angle.cpp  cal_Jacobian_of_angle.h  cal_angles_areas.cpp  cal_angles_areas.h  cal_edge_length.cpp  cal_edge_length.h  cal_laplacian.cpp  cal_laplacian.h  cal_normals.cpp  cal_normals.h  get_vertex_neighbor.cpp  get_vertex_neighbor.h  mesh_io.cpp  mesh_io.h  visualizer.cpp  visualizer.h  vtk.h
